@@ -9,6 +9,7 @@
   (in addition to beforeclick and afterclick) useful if you don't
   want the table to move your linked P4A_Data_Source
 - P4A_Table::showTitleBar() method was removed because obsolete
+- P4A_Table_Rows::disable() won't disable table's "action cols"
 
 3.0.0-rc3
 - file upload check and error reporting was enhanced
